--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 		<header class="bp-header cf">
 			<span>Happy Feet</span>
 			<h1>Le pingouin Happy</h1>
-			<nav>
+			<!--	<nav>
 				<a href="http://tympanus.net/Blueprints/FilterableProductGrid/" class="bp-icon bp-icon-prev" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
-				<!--a href="" class="bp-icon bp-icon-next" data-info="next Blueprint"><span>Next Blueprint</span></a-->
+				<!--a href="" class="bp-icon bp-icon-next" data-info="next Blueprint"><span>Next Blueprint</span></a
 				<a href="http://tympanus.net/codrops/?p=24330" class="bp-icon bp-icon-drop" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
 				<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
-			</nav>
+			</nav>/>  -->
 		</header>
 		<!-- Grid -->
 		<section class="slider">
@@ -93,11 +93,11 @@
 				</div>
 				<h2 class="slide__title"><span>Happy Feet</span> faisant la queuleuleu</h2>
 			</div>
-		<!--	<nav class="slider__nav">
+			<nav class="slider__nav">
 				<button class="button button--nav-prev"><i class="icon icon--arrow-left"></i><span class="text-hidden">Previous product</span></button>
 				<button class="button button--zoom"><i class="icon icon--zoom"></i><span class="text-hidden">View details</span></button>
 				<button class="button button--nav-next"><i class="icon icon--arrow-right"></i><span class="text-hidden">Next product</span></button>
-			</nav> /> -->
+			</nav>
 		</section>
 		<!-- /slider-->
 		<section class="content">
